--- a/ExtraRando/ExtraRando.csproj
+++ b/ExtraRando/ExtraRando.csproj
@@ -24,20 +24,31 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove="Resources\Sprites\Pantheon_Artist.png" />
+      <None Remove="Resources\Sprites\Pantheon_Hallownest.png" />
+      <None Remove="Resources\Sprites\Pantheon_Knight.png" />
+      <None Remove="Resources\Sprites\Pantheon_Master.png" />
+      <None Remove="Resources\Sprites\Pantheon_Sage.png" />
+    </ItemGroup>
+
+    <ItemGroup>
         <Reference Include="Assembly-CSharp">
             <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Assembly-CSharp.dll</HintPath>
         </Reference>
         <Reference Include="ItemChanger">
-            <HintPath>..\..\ItemChanger\ItemChanger.dll</HintPath>
+          <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\ItemChanger\ItemChanger.dll</HintPath>
         </Reference>
         <Reference Include="KorzUtils">
-            <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\KorzUtils\KorzUtils.dll</HintPath>
+          <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\KorzUtils\KorzUtils.dll</HintPath>
         </Reference>
         <Reference Include="MenuChanger">
-            <HintPath>..\..\MenuChanger\MenuChanger.dll</HintPath>
+          <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\MenuChanger\MenuChanger.dll</HintPath>
         </Reference>
         <Reference Include="MMHOOK_Assembly-CSharp">
             <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\MMHOOK_Assembly-CSharp.dll</HintPath>
+        </Reference>
+        <Reference Include="MMHOOK_PlayMaker">
+          <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\MMHOOK_PlayMaker.dll</HintPath>
         </Reference>
         <Reference Include="Mono.Cecil">
             <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mono.Cecil.dll</HintPath>
@@ -58,10 +69,10 @@
             <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\PlayMaker.dll</HintPath>
         </Reference>
         <Reference Include="RandomizerCore">
-            <HintPath>..\..\RandoCore\RandomizerCore.dll</HintPath>
+          <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\RandomizerCore\RandomizerCore.dll</HintPath>
         </Reference>
         <Reference Include="RandomizerMod">
-            <HintPath>..\..\Randomizer\RandomizerMod.dll</HintPath>
+          <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\Randomizer 4\RandomizerMod.dll</HintPath>
         </Reference>
         <Reference Include="RandoSettingsManager">
           <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\RandoSettingsManager\RandoSettingsManager.dll</HintPath>
