--- a/ExtraRando/ExtraRando.csproj
+++ b/ExtraRando/ExtraRando.csproj
@@ -21,6 +21,7 @@
         <EmbeddedResource Include="Resources\Sprites\*.png" />
         <EmbeddedResource Include="Resources\ItemChanger\*.json" />
         <EmbeddedResource Include="Resources\Randomizer\*.json" />
+	<EmbeddedResource Include="Resources\Sounds\*.wav" />
     </ItemGroup>
 
     <ItemGroup>
@@ -71,6 +72,9 @@
         </Reference>
         <Reference Include="UnityEngine">
             <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\UnityEngine.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.AudioModule">
+          <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.CoreModule">
             <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
