--- a/ExtraRando/ExtraRando.csproj
+++ b/ExtraRando/ExtraRando.csproj
@@ -25,6 +25,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove="Resources\Randomizer\Substitutions.json" />
+    </ItemGroup>
+
+    <ItemGroup>
         <Reference Include="Assembly-CSharp">
             <HintPath>..\..\..\Program Files\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Assembly-CSharp.dll</HintPath>
         </Reference>
