Change reference path drive letter

--- a/ExtraRando/ExtraRando.csproj
+++ b/ExtraRando/ExtraRando.csproj
@@ -11,7 +11,7 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <HollowKnightRefs>E:/Program Files/Steam/steamapps/common/Hollow Knight/hollow_knight_Data/Managed/</HollowKnightRefs>
+        <HollowKnightRefs>C:/Program Files (x86)/Steam/steamapps/common/Hollow Knight/hollow_knight_Data/Managed/</HollowKnightRefs>
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
         <DocumentationFile></DocumentationFile>
         <FileVersion>0.5.1.0</FileVersion>
