Update with parent repo commits up to v0.11.1

--- a/ExtraRando/ExtraRando.csproj
+++ b/ExtraRando/ExtraRando.csproj
@@ -21,7 +21,7 @@
         <EmbeddedResource Include="Resources\Sprites\*.png" />
         <EmbeddedResource Include="Resources\ItemChanger\*.json" />
         <EmbeddedResource Include="Resources\Randomizer\*.json" />
-	<EmbeddedResource Include="Resources\Sounds\*.wav" />
+	    <EmbeddedResource Include="Resources\Sounds\*.wav" />
     </ItemGroup>
 
     <ItemGroup>
@@ -91,7 +91,7 @@
     </ItemGroup>
 
     <Target Name="CopyMod" AfterTargets="PostBuildEvent">
-        <Copy SourceFiles="$(TargetPath);$(TargetDir)$(TargetName).pdb;$(TargetDir)$(TargetName).xml" DestinationFolder="$(HollowKnightRefs)\Mods\$(TargetName)" OverwriteReadOnlyFiles="true" />
+        <Copy SourceFiles="$(TargetPath);$(TargetDir)$(TargetName).pdb;$(TargetDir)$(TargetName).xml" DestinationFolder="$(HollowKnightRefs)\Mods\Extra Rando" OverwriteReadOnlyFiles="true" />
     </Target>
 
     <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
